--- a/client/index.html
+++ b/client/index.html
@@ -16,7 +16,7 @@
         </div>
         <div class="input_wrapper">
             <form>
-                <input id="message">
+                <input id="message" placeholder="Message">
                 <button class="submit_btn" type="submit">Send</button>
               </form>
         </div>
