--- a/client/index.html
+++ b/client/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <div class="app">
+        <p class="online">ONLINE 0</p>
         <div class="chat_wrapper">
             <div class="chat_block">
                 <div id="chat"></div>
