--- a/client/index.html
+++ b/client/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="app">
-        <p class="online">ONLINE 0</p>
+        <p class="online">2 ONLINE</p>
         <div class="chat_wrapper">
             <div class="chat_block">
                 <div id="chat"></div>
